tests/aster/x/mochi/rosetta/distance-and-bearing.error
error[A003]: undefined variable ap
  --> /workspace/mochi/tests/rosetta/x/Mochi/distance-and-bearing.mochi:161:42

161 |     let d = distance(planeLat, planeLon, ap.lat, ap.lon)
    |                                          ^

help:
  Declare ap before use
